--- a/Code/public/css/main.css
+++ b/Code/public/css/main.css
@@ -15546,7 +15546,7 @@ tbody .previewImg {
 
 tbody .previewImg img {
   width: auto;
-  height: 15%;
+  height: 150px;
 }
 
 .createCollage .col-md-4 {
