--- a/Code/public/css/main.scss
+++ b/Code/public/css/main.scss
@@ -15684,7 +15684,7 @@ tbody{
         padding-bottom: 0.75rem;
         img{
             width:auto;
-            height: 15%;
+            height: 150px;
         }
     }
 }
