--- a/template/index.html
+++ b/template/index.html
@@ -17,33 +17,126 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 
+    <!-- Menu Maker plugin -->
+    <link rel="stylesheet" href="plugins/menuMaker/css/menumaker.css" />
+
+    <link rel="stylesheet" href="css/style.css" />
     <!-- CSS END-->
 
 </head>
 
 <body>
 
+    <div class="header-top-design">&nbsp;</div>
+
     <!-- Heading Bar -->
     <div class="container-fluid headingBar">
         <div class="row">
-            <div class="col-6 col-lg-3 align-self-center logo">
+            <div class="col-6 col-md-3 align-self-center logo">
                 <a href="index.html">
-                    <h1 class="Display"> <span class="Part1">Party</span><span class="Part2">Lesh</span> </h1>
+                    <img src="img/logo.png" alt="">
                 </a>
             </div>
-            <div class="col-0 col-lg-5 welcomeGif">
-                <img src="img/gif/headerGif.gif">
+            <div class="col-0 col-md-6 align-self-center text-center headCenterText">
+                DPS Kids School Bhopal
             </div>
-            <div class="col-6 col-lg-4 align-self-center contact">
-                <h6>9074 - 200 - 979&nbsp;&nbsp;<span class="icon fas fa-mobile-alt "></span> </h6>
-                <h6>support@PartyLesh.com&nbsp;<span class="icon far fa-envelope"></span> </h6>
+            <div class="col-6 col-md-3 align-self-center text-left">
+                <div class="sharethis-inline-share-buttons"></div>
             </div>
         </div>
     </div>
     <!-- Heading Bar -->
 
+    <!-- Navbar Bar -->
+    <nav class="navbar navbar-expand-sm navbar-dark mx-auto">
+        <label class="navbar-brand">Menu</label>
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"><span class="icon fas fa-bars" style="color: white;"></span></button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
+                </li>
 
+                <li class="nav-item dropdown pr-3 pl-3">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About us</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" href="about.html">About School</a>
+                        <a class="dropdown-item" href="PrinMgs.html">Principal Message</a>
+                        <a class="dropdown-item" href="Activities.html">Activities</a>
+                        <a class="dropdown-item" href="Mission.html">Our Mission</a>
+                    </div>
+                </li>
 
+                <li class="nav-item dropdown pr-3 pl-3">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Academics</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" href="rules.html">Rules of School</a>
+                        <a class="dropdown-item" href="Fees.html">Fee Rules</a>
+                        <a class="dropdown-item" href="school.html">School Timing</a>
+                        <a class="dropdown-item" href="curriculam.html">Curriculam</a>
+                    </div>
+                </li>
+
+                <li class="nav-item dropdown pr-3 pl-3">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" href="Academicf.html">Academic Facilities</a>
+                        <a class="dropdown-item" href="Extra.html">Extra Curricular</a>
+                    </div>
+                </li>
+
+                <li class="nav-item dropdown pr-3 pl-3">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gallery</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" href="#">Image Gallery</a>
+                        <a class="dropdown-item" href="#">Video Gallery</a>
+                    </div>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Admission Form</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+    <!-- Navbar Bar -->
+
+    <!-- Image Slider -->
+    <div id="slides" class="carousel slide slider" data-ride="carousel">
+        <ul class="carousel-indicators">
+            <li data-target="#slides" data-slide-to="0" class="active"></li>
+            <li data-target="#slides" data-slide-to="1"></li>
+            <li data-target="#slides" data-slide-to="2"></li>
+            <li data-target="#slides" data-slide-to="3"></li>
+            <li data-target="#slides" data-slide-to="4"></li>
+        </ul>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="img-fluid" src="img/slider/S_1.jpg">
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid" src="img/slider/S_2.jpg">
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid" src="img/slider/S_3.jpg">
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid" src="img/slider/S_4.jpg">
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid" src="img/slider/S_5.jpg">
+                <div class="carousel-caption">
+                    <h3>First slide</h3>
+                    <p>This is the first slide.</p>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev"><span class="fas fa-chevron-left"></span></a>
+        <a class="carousel-control-next" href="#slides" role="button" data-slide="next"><span class="fas fa-chevron-right"></span></a>
+        </a>
+    </div>
+    <!-- Image Slider -->
 
 
     <!-- JS START-->
@@ -58,6 +151,13 @@
 
     <!-- jQuery CDN-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- share this CDN-->
+    <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c14ae2a7b0b4500110a1ea6&product=inline-share-buttons' async='async'></script>
+
+    <!-- Menu Maker plugin -->
+    <script src="plugins/menuMaker/js/menumaker.js"></script>
+
     <!-- JS END -->
 </body>
 
