--- a/template/index.html
+++ b/template/index.html
@@ -53,8 +53,8 @@
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"><span class="icon fas fa-bars" style="color: white;"></span></button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
                 </li>
 
                 <li class="nav-item dropdown pr-3 pl-3">
@@ -100,6 +100,7 @@
             </ul>
         </div>
     </nav>
+    <div class="slider-top-design">&nbsp;</div>
     <!-- Navbar Bar -->
 
     <!-- Image Slider -->
@@ -138,6 +139,115 @@
     </div>
     <!-- Image Slider -->
 
+    <!-- Paragraph block -->
+    <div class="paragraphBlock">
+        <div class="title">About DPS Kids - Bhopal</div>
+        <div class="subText">Delhi Public Kids School is India’s fast-growing ISO 9001-2008 Certified chain of Hi-tech International Standard Montessori Pre-Schools. While maintaining the highest standards and quality of education.</div>
+    </div>
+    <!-- Paragraph block -->
+
+    <!-- News heading -->
+    <div class="header-top-design-noColor">&nbsp;</div>
+    <div class="newHeadingBlock">
+        <div class="newsheading text-center">Admission</div>
+        <marquee behavior="scroll" scrollamount="5" onMouseOver="this.stop();" onMouseOut="this.start();" direction="left">
+            <img src="img/title_icon.png" alt="">
+            <a href="http://dpskidsbhopal.com" class="news-title" style="text-decoration:none">Admissions for Playgroup, Nursery, KG-1, KG-2 are open for 2019-20 Please visit our campus..</a>
+        </marquee>
+    </div>
+    <div class="header-top-design-noColor-rotated">&nbsp;</div>
+    <!-- News heading -->
+
+    <!-- website Container -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-12">
+                        <!-- Paragraph block -->
+                        <div class="paragraphBlock">
+                            <div class="title">Delhi Public Kids School</div>
+                            <div class="subText">Delhi Public Kids School is India’s fast-growing ISO 9001-2008 Certified chain of Hi-tech International Standard Montessori Pre-Schools. While maintaining the highest standards and quality of education. We have spread our wings pan India with 200+ of Delhi Public Kids School, Delhi Public Secondary Schools, Delhi Public International School, Delhi Public Girls School. In Primary and Secondary segment, with 200 schools already in operation and many more in the making, DPSS is rewriting the history of school education in India . Some of our spectacular schools are already in operation in India. With the motto " ENCOURAGING CHILDREN TO DEVELOP THERE POTENTIAL AS LIFE LONG LEARNERS “ has pledged to provide the finest quality of education at affordable cost and create a society of progressively thinking individuals.</div>
+                        </div>
+                        <!-- Paragraph block -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 woodBlock justify-content">
+                <div class="row">
+                    <div class="col-12 text-center">
+
+                        <div class="container-fluid notice">
+                            <img class="img-fluid" src="img/board.png" alt="">
+                            <div class="school-updates">
+                                <marquee behavior="" direction="up" onmouseover="stop();" onmouseout="start();" scrollamount="8">
+                                    <div class="singleNew">
+                                        <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                                        <hr>
+                                        <p class="text-right">posted on : 27 - 04 - 2019</p>
+                                    </div>
+                                    <div class="singleNew">
+                                        <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                                        <hr>
+                                        <p class="text-right">posted on : 27 - 04 - 2019</p>
+                                    </div>
+                                    <div class="singleNew">
+                                        <h3><a href="">Lorem ipsum dolor sit amet.</a></h3>
+                                        <hr>
+                                        <p class="text-right">posted on : 27 - 04 - 2019</p>
+                                    </div>
+                                </marquee>
+                            </div>
+                        </div>
+                        <div class="birthdayWish">
+                            <img class="img-fluid sparkles" src="img/sparkles.gif" alt="">
+                            <h4 class="wishText"><i>Wish you a very happy birthday</i><br><strong>Riya</strong></h4>
+                            <img class="img-fluid" src="img/kid.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- website Container -->
+
+    <div class="buttom-design">&nbsp;</div>
+    <img class="pencilImg img-fluid" src="img/pencil.jpg" alt="">
+
+    <!-- footer -->
+    <br><br>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-left contact">
+                    <h4 class="Display"><strong>Contact Us</strong></h4>
+                    <h5 class="Display2"><strong>Delhi Public Kids School</strong></h5>
+                    <strong>
+                        <p>
+                            A-17, Aadarsh Nagar, <br>
+                            Behind Pradhan Mandapam Marriage Garden <br>
+                            Hoshnagabad Road, Bhopal <br>
+                            E-Mail : dpskidsbhopal@gmail.com <br>
+                            Telephone : 0755-2418222, 7879136615 <br><br>
+                            School Hours 7.00 AM -1.30 PM
+                        </p>
+                    </strong>
+                </div>
+                <div class="col-md-6 map ">
+                    <h4 class="Display"><strong>Reach Us</strong></h4>
+                    <div class="embed-responsive embed-responsive-4by3">
+                        <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d916.8601068891716!2d77.45284960078531!3d23.19061467490816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1544147757055" allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <br><br>
+    <!-- footer -->
+    <div class="col-12 text-center copyRight">
+        <h6> &copy; DPSKidsBhopal.com. All Rights Reserved.</h6>
+    </div>
 
     <!-- JS START-->
 
