--- a/template/css/style.css
+++ b/template/css/style.css
@@ -3,6 +3,16 @@
   src: url(../font/BazookaRegular.ttf);
 }
 
+@font-face {
+  font-family: BassetBoldItalic;
+  src: url(../font/BassetBoldItalic.TTF);
+}
+
+@font-face {
+  font-family: Daneehand;
+  src: url(../font/Daneehand.otf);
+}
+
 @media (min-width: 320px) {
   .headingBar {
     background-color: #f6f7ed;
@@ -50,6 +60,7 @@
 }
 
 .navbar {
+  z-index: 999;
   background-color: #9a0000;
 }
 
@@ -60,6 +71,7 @@
 .navbar .navbar-collapse .nav-link,
 .navbar .navbar-collapse .dropdown-toggle {
   color: white;
+  padding-right: 2rem;
 }
 
 .navbar .navbar-collapse .dropdown-menu {
@@ -86,8 +98,13 @@
   }
 }
 
+.slider {
+  margin-top: -15px;
+  z-index: 998;
+}
+
 .slider .carousel-item img {
-  z-index: 1;
+  z-index: 998;
   width: 100%;
 }
 
@@ -111,8 +128,394 @@
   .slider .carousel-indicators {
     visibility: visible;
   }
-  .slider .carousel-control-prev span, .slider .carousel-control-next span {
+  .slider .carousel-control-prev span,
+  .slider .carousel-control-next span {
     font-size: 3rem;
+  }
+}
+
+.paragraphBlock {
+  padding: 3rem;
+}
+
+.paragraphBlock .title {
+  font-family: BassetBoldItalic;
+  font-size: 28px;
+  color: #9a0000;
+  text-align: left;
+  margin: 8px;
+  font-weight: 800;
+}
+
+.paragraphBlock .subText {
+  font-family: BassetBoldItalic;
+  font-size: 16px;
+  color: #a19d9d;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  text-align: left;
+  line-height: 23px;
+}
+
+.newHeadingBlock {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.newHeadingBlock .newsheading {
+  font-family: BassetBoldItalic;
+  font-size: 25px;
+  color: #9a0000;
+  text-align: center;
+  margin-top: 5px;
+  font-weight: bold;
+}
+
+.newHeadingBlock marquee {
+  padding-top: 1rem;
+}
+
+.newHeadingBlock marquee .news-title {
+  font-family: BassetBoldItalic;
+  font-size: 18px;
+  color: #9a0000;
+  text-align: center;
+  padding-left: 1rem;
+}
+
+@media (min-width: 320px) {
+  .birthdayWish {
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+  }
+  .birthdayWish .sparkles {
+    position: absolute;
+    left: 0;
+  }
+}
+
+@media (min-width: 425px) {
+  .birthdayWish {
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+  }
+  .birthdayWish .sparkles {
+    width: 90%;
+    position: absolute;
+    left: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .birthdayWish {
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+  }
+  .birthdayWish .wishText {
+    font-size: 1rem;
+  }
+  .birthdayWish .sparkles {
+    width: 100%;
+    position: absolute;
+    left: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .birthdayWish {
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+  }
+  .birthdayWish .wishText {
+    font-size: 1.25rem;
+  }
+  .birthdayWish .sparkles {
+    width: 100%;
+    position: absolute;
+    left: 0;
+  }
+}
+
+@media (min-width: 1250px) {
+  .birthdayWish {
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+  }
+  .birthdayWish .wishText {
+    font-size: 1.5rem;
+  }
+  .birthdayWish .sparkles {
+    width: 85%;
+    position: absolute;
+    left: 3rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .birthdayWish {
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+  }
+  .birthdayWish .wishText {
+    font-size: 1.5rem;
+  }
+  .birthdayWish .sparkles {
+    width: 85%;
+    position: absolute;
+    left: 3rem;
+  }
+}
+
+@media (min-width: 320px) {
+  .notice .school-updates {
+    position: absolute;
+    height: 7rem;
+    top: 6rem;
+    padding-left: 3rem;
+    padding-right: 5rem;
+  }
+  .notice .school-updates marquee {
+    height: 7rem;
+  }
+  .notice .school-updates marquee .singleNew h3 a {
+    color: #b4b4b4;
+    font-family: Daneehand;
+  }
+  .notice .school-updates marquee .singleNew p {
+    color: white;
+  }
+  .notice .school-updates marquee .singleNew hr {
+    width: 90%;
+    background-color: white;
+  }
+}
+
+@media (min-width: 375px) {
+  .notice .school-updates {
+    position: absolute;
+    height: 9rem;
+    top: 6rem;
+    padding-left: 3rem;
+    padding-right: 5rem;
+  }
+  .notice .school-updates marquee {
+    height: 9rem;
+  }
+  .notice .school-updates marquee .singleNew h3 a {
+    color: #b4b4b4;
+    font-family: Daneehand;
+  }
+  .notice .school-updates marquee .singleNew p {
+    color: white;
+  }
+  .notice .school-updates marquee .singleNew hr {
+    width: 90%;
+    background-color: white;
+  }
+}
+
+@media (min-width: 425px) {
+  .notice .school-updates {
+    position: absolute;
+    height: 11rem;
+    top: 6rem;
+    padding-left: 3rem;
+    padding-right: 5rem;
+  }
+  .notice .school-updates marquee {
+    height: 11rem;
+  }
+  .notice .school-updates marquee .singleNew h3 a {
+    color: #b4b4b4;
+    font-family: Daneehand;
+  }
+  .notice .school-updates marquee .singleNew p {
+    color: white;
+  }
+  .notice .school-updates marquee .singleNew hr {
+    width: 90%;
+    background-color: white;
+  }
+}
+
+@media (min-width: 768px) {
+  .notice .school-updates {
+    position: absolute;
+    height: 5rem;
+    top: 4rem;
+    padding-left: 3rem;
+    padding-right: 5rem;
+  }
+  .notice .school-updates marquee {
+    height: 5rem;
+  }
+  .notice .school-updates marquee .singleNew h3 {
+    font-size: 1rem;
+  }
+  .notice .school-updates marquee .singleNew h3 a {
+    color: #b4b4b4;
+    font-family: Daneehand;
+  }
+  .notice .school-updates marquee .singleNew p {
+    font-size: 0.75rem;
+    color: white;
+  }
+  .notice .school-updates marquee .singleNew hr {
+    width: 90%;
+    background-color: white;
+  }
+}
+
+@media (min-width: 1024px) {
+  .notice .school-updates {
+    position: absolute;
+    height: 8rem;
+    top: 5rem;
+    padding-left: 3rem;
+    padding-right: 5rem;
+  }
+  .notice .school-updates marquee {
+    height: 8rem;
+  }
+  .notice .school-updates marquee .singleNew h3 {
+    font-size: 1.5rem;
+  }
+  .notice .school-updates marquee .singleNew h3 a {
+    color: #b4b4b4;
+    font-family: Daneehand;
+  }
+  .notice .school-updates marquee .singleNew p {
+    font-size: 0.75rem;
+    color: white;
+  }
+  .notice .school-updates marquee .singleNew hr {
+    width: 90%;
+    background-color: white;
+  }
+}
+
+@media (min-width: 1250px) {
+  .notice .school-updates {
+    position: absolute;
+    height: 14rem;
+    top: 6rem;
+    padding-left: 3rem;
+    padding-right: 0rem;
+  }
+  .notice .school-updates marquee {
+    height: 14rem;
+    width: 18rem;
+  }
+  .notice .school-updates marquee .singleNew h3 {
+    font-size: 1.75rem;
+  }
+  .notice .school-updates marquee .singleNew h3 a {
+    color: #b4b4b4;
+    font-family: Daneehand;
+  }
+  .notice .school-updates marquee .singleNew p {
+    font-size: 1rem;
+    color: white;
+  }
+  .notice .school-updates marquee .singleNew hr {
+    width: 90%;
+    background-color: white;
+  }
+}
+
+@media (min-width: 1440px) {
+  .notice .school-updates {
+    position: absolute;
+    height: 14rem;
+    top: 6rem;
+    padding-left: 4rem;
+    padding-right: 0rem;
+  }
+  .notice .school-updates marquee {
+    height: 14rem;
+    width: 18rem;
+  }
+  .notice .school-updates marquee .singleNew h3 {
+    font-size: 1.75rem;
+  }
+  .notice .school-updates marquee .singleNew h3 a {
+    color: #b4b4b4;
+    font-family: Daneehand;
+  }
+  .notice .school-updates marquee .singleNew p {
+    font-size: 1rem;
+    color: white;
+  }
+  .notice .school-updates marquee .singleNew hr {
+    width: 90%;
+    background-color: white;
+  }
+}
+
+@media (min-width: 320px) {
+  .contact {
+    border-right: none;
+    border-bottom: 5px solid #9a0000;
+  }
+  .contact h1, .contact h2, .contact h3, .contact h4, .contact h5, .contact h6, .contact p, .contact a, .contact label {
+    font-family: BalognaBoldUII;
+    color: #9a0000;
+  }
+}
+
+@media (min-width: 768px) {
+  .contact {
+    border-right: 5px solid #9a0000;
+    border-bottom: none;
+  }
+  .contact h1, .contact h2, .contact h3, .contact h4, .contact h5, .contact h6, .contact p, .contact a, .contact label {
+    font-family: BalognaBoldUII;
+    color: #9a0000;
+  }
+}
+
+@media (min-width: 320px) {
+  .map {
+    padding-top: 2rem;
+  }
+  .map h1, .map h2, .map h3, .map h4, .map h5, .map h6, .map p, .map a, .map label {
+    font-family: BalognaBoldUII;
+    color: #9a0000;
+  }
+  .map .embed-responsive {
+    border: 2px solid #9a0000;
+    -webkit-box-shadow: 2px 6px 7px rgba(0, 0, 0, 0.25);
+            box-shadow: 2px 6px 7px rgba(0, 0, 0, 0.25);
+  }
+}
+
+@media (min-width: 768px) {
+  .map {
+    padding-top: 0rem;
+  }
+  .map h1, .map h2, .map h3, .map h4, .map h5, .map h6, .map p, .map a, .map label {
+    font-family: BalognaBoldUII;
+    color: #9a0000;
+  }
+  .map .embed-responsive {
+    border: 2px solid #9a0000;
+    -webkit-box-shadow: 2px 6px 7px rgba(0, 0, 0, 0.25);
+            box-shadow: 2px 6px 7px rgba(0, 0, 0, 0.25);
+  }
+}
+
+@media (min-width: 1024px) {
+  .map {
+    padding-left: 13rem;
+  }
+  .map h1, .map h2, .map h3, .map h4, .map h5, .map h6, .map p, .map a, .map label {
+    font-family: BalognaBoldUII;
+    color: #9a0000;
+  }
+  .map .embed-responsive {
+    border: 2px solid #9a0000;
+    -webkit-box-shadow: 2px 6px 7px rgba(0, 0, 0, 0.25);
+            box-shadow: 2px 6px 7px rgba(0, 0, 0, 0.25);
   }
 }
 
@@ -122,11 +525,55 @@
   background-repeat: repeat-x;
 }
 
+.header-top-design-noColor {
+  background-image: url(../img/header_top_design.png);
+  background-repeat: repeat-x;
+}
+
+.header-top-design-noColor-rotated {
+  background-image: url(../img/header_top_design.png);
+  background-repeat: repeat-x;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
 .slider-top-design {
   background-image: url(../img/slider_bottom.png);
   background-repeat: repeat-x;
   position: relative;
   margin-top: -5px;
   z-index: 999;
+}
+
+body {
+  background-image: url(../img/page.jpg);
+}
+
+.woodBlock {
+  background-image: url(../img/wood.jpg);
+  background-repeat: repeat-y;
+  background-size: 100%;
+}
+
+.buttom-design {
+  background-image: url(../img/buttom_design.png);
+  background-repeat: repeat-x;
+}
+
+.pencilImg {
+  width: 100%;
+  position: relative;
+  bottom: 1rem;
+  z-index: -10;
+  border-bottom: 5px #9a0000 solid;
+}
+
+.copyRight {
+  padding: 1rem;
+  background-color: #572828;
+}
+
+.copyRight h6 {
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
