--- a/Code/public/website/css/style.scss
+++ b/Code/public/website/css/style.scss
@@ -8,6 +8,8 @@
 @import "notice";
 @import "contact";
 @import "map";
+@import "serviceBlock";
+
 
 .header-top-design {
 	background-color: #f6f7ed;
