--- a/Code/public/website/css/_slider.scss
+++ b/Code/public/website/css/_slider.scss
@@ -7,7 +7,18 @@
 			z-index: 998;
 			width: 100%;
 		}
-	}
+    }
+    .carousel-caption{
+        h3{
+            font-family: 'Handlee', cursive;
+            font-size: 2rem;
+            transition: transform .5s;
+            text-shadow: 3px 2px rgba(0, 0, 0, 0.5);
+            &:hover{
+                transform: scale(1.01);
+            }
+        }
+    }
 	.carousel-control-prev {
 		&:hover {
 			background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
