--- a/Code/public/website/css/style.css
+++ b/Code/public/website/css/style.css
@@ -108,6 +108,21 @@
   width: 100%;
 }
 
+.slider .carousel-caption h3 {
+  font-family: 'Handlee', cursive;
+  font-size: 2rem;
+  -webkit-transition: -webkit-transform .5s;
+  transition: -webkit-transform .5s;
+  transition: transform .5s;
+  transition: transform .5s, -webkit-transform .5s;
+  text-shadow: 3px 2px rgba(0, 0, 0, 0.5);
+}
+
+.slider .carousel-caption h3:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+}
+
 .slider .carousel-control-prev:hover {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0)));
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
@@ -519,30 +534,49 @@
   }
 }
 
-.serviceBlock {
-  padding: 3rem;
-  padding-top: 0rem;
+@media (min-width: 320px) {
+  .serviceBlock .text-primary {
+    color: #9a0000 !important;
+  }
+  .serviceBlock h4 {
+    padding-top: 1rem;
+    font-family: 'Roboto Slab', serif;
+  }
+  .serviceBlock a {
+    padding: 3rem;
+    padding-top: 0.25rem;
+    color: black;
+    -webkit-transition: -webkit-transform .5s;
+    transition: -webkit-transform .5s;
+    transition: transform .5s;
+    transition: transform .5s, -webkit-transform .5s;
+  }
+  .serviceBlock a:hover {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+  }
 }
 
-.serviceBlock .text-primary {
-  color: #9a0000 !important;
-}
-
-.serviceBlock h4 {
-  padding-top: 1rem;
-}
-
-.serviceBlock a {
-  color: black;
-  -webkit-transition: -webkit-transform .5s;
-  transition: -webkit-transform .5s;
-  transition: transform .5s;
-  transition: transform .5s, -webkit-transform .5s;
-}
-
-.serviceBlock a:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+@media (min-width: 1024px) {
+  .serviceBlock .text-primary {
+    color: #9a0000 !important;
+  }
+  .serviceBlock h4 {
+    padding-top: 1rem;
+  }
+  .serviceBlock a {
+    padding: 3rem;
+    padding-top: 0rem;
+    color: black;
+    -webkit-transition: -webkit-transform .5s;
+    transition: -webkit-transform .5s;
+    transition: transform .5s;
+    transition: transform .5s, -webkit-transform .5s;
+  }
+  .serviceBlock a:hover {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+  }
 }
 
 .header-top-design {
