Adding Principle Message Code

--- a/Code/public/website/css/_principalMessages.scss
+++ b/Code/public/website/css/_principalMessages.scss
@@ -1,4 +1,4 @@
-.paragraphBlock {
+.principalMessages {
 	padding: 3rem;
     padding-bottom : 0rem;
 
@@ -19,5 +19,8 @@
 		margin-bottom: 5px;
 		text-align: left;
 		line-height: 23px;
-	}
+    }
+    p{
+        color: #a19d9d;
+    }
 }
