--- a/Code/public/website/css/_serviceBlock.scss
+++ b/Code/public/website/css/_serviceBlock.scss
@@ -2,6 +2,7 @@
 @media (min-width: 320px) {
     .serviceBlock{
 
+        padding-top: 3rem;
         .text-primary{
             color: #9a0000 !important;
         }
