--- a/template/css/style.scss
+++ b/template/css/style.scss
@@ -8,6 +8,8 @@
 @import "notice";
 @import "contact";
 @import "map";
+@import "tabMenu";
+@import "singleNoticeBlock";
 
 .header-top-design {
 	background-color: #f6f7ed;
