--- a/template/Holidays.html
+++ b/template/Holidays.html
@@ -268,6 +268,7 @@
     <!-- Menu Maker plugin -->
     <script src="plugins/menuMaker/js/menumaker.js"></script>
 
+    <script src="js/tabMenu.js"></script>
     <!-- JS END -->
 </body>
 
