--- a/Code/public/website/css/style.scss
+++ b/Code/public/website/css/style.scss
@@ -10,7 +10,7 @@
 @import "map";
 @import "serviceBlock";
 @import "principalMessages";
-
+@import "tabMenu";
 
 .header-top-design {
 	background-color: #f6f7ed;
@@ -64,3 +64,4 @@ body {
 		color: white;
 	}
 }
+
