--- a/Code/public/website/css/style.css
+++ b/Code/public/website/css/style.css
@@ -93,6 +93,18 @@
 }
 
 @media (min-width: 768px) {
+  .navbar .nav-link {
+    font-size: 0.8rem;
+  }
+  .navbar label {
+    display: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  .navbar .nav-link {
+    font-size: 1.15rem;
+  }
   .navbar label {
     display: none;
   }
@@ -609,6 +621,58 @@
 
 .principalMessages p {
   color: #a19d9d;
+}
+
+.singleNoticeBlock {
+  padding-top: 2rem !important;
+}
+
+@media (min-width: 320px) {
+  .tab-content .title {
+    font-family: BassetBoldItalic;
+    font-size: 28px;
+    color: #9a0000;
+    margin: 8px;
+    font-weight: 800;
+    padding-top: 1rem;
+  }
+  .tabMenu .nav-item {
+    display: none !important;
+  }
+  .tabMenu .nav-item .nav-link {
+    color: #9a0000 !important;
+  }
+  .tabMenu .mobileDropdown {
+    display: block !important;
+  }
+  .tabMenu .mobileDropdown .dropdown-menu {
+    inline-size: 100%;
+  }
+  .tabMenu .mobileDropdown .dropdown-item {
+    text-align: center !important;
+  }
+  .tabMenu .mobileDropdown .dropdown-item.active, .tabMenu .mobileDropdown .dropdown-item:active {
+    background-color: #9a0000 !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .singleNoticeBlock {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
+  .tabMenu .nav-item {
+    display: block !important;
+  }
+  .tabMenu .nav-item .nav-link {
+    color: #9a0000 !important;
+  }
+  .tabMenu .mobileDropdown {
+    display: none !important;
+  }
+  .tabMenu .mobileDropdown .dropdown-toggle::after {
+    display: none !important;
+  }
 }
 
 .header-top-design {
