--- a/Code/public/website/css/style.scss
+++ b/Code/public/website/css/style.scss
@@ -11,6 +11,7 @@
 @import "serviceBlock";
 @import "principalMessages";
 @import "tabMenu";
+@import "contactus";
 
 .header-top-design {
 	background-color: #f6f7ed;
