adding Image gallery

--- a/template/css/style.scss
+++ b/template/css/style.scss
@@ -10,6 +10,7 @@
 @import "map";
 @import "tabMenu";
 @import "singleNoticeBlock";
+@import "imgGallery";
 
 .header-top-design {
 	background-color: #f6f7ed;
