--- a/Code/public/website/css/style.scss
+++ b/Code/public/website/css/style.scss
@@ -12,6 +12,7 @@
 @import "principalMessages";
 @import "tabMenu";
 @import "contactus";
+@import "imgGallery";
 
 .header-top-design {
 	background-color: #f6f7ed;
