adding video and some effects

--- a/Code/public/website/css/_imgGallery.scss
+++ b/Code/public/website/css/_imgGallery.scss
@@ -22,9 +22,22 @@
             margin: 8px;
             font-weight: 800;
         }
-        .img-fluid{
-            width: 200px;
-            border: 2px solid #9a0000 ;
+        .img-hover-zoom{
+            .img-fluid{
+                width: 200px;
+                border: 2px solid #9a0000 ;
+            }
+
+            background-color: black;
+            overflow: hidden;
+            img{
+                transition: transform .5s ease;
+                opacity: 1;
+                &:hover{
+                    transform: scale(1.2);
+                    opacity: 0.7;
+                }
+            }
         }
     }
 }
