--- a/template/css/style.scss
+++ b/template/css/style.scss
@@ -11,6 +11,7 @@
 @import "tabMenu";
 @import "singleNoticeBlock";
 @import "imgGallery";
+@import "videoGallery";
 
 .header-top-design {
 	background-color: #f6f7ed;
