--- a/Code/public/website/css/style.scss
+++ b/Code/public/website/css/style.scss
@@ -13,6 +13,7 @@
 @import "tabMenu";
 @import "contactus";
 @import "imgGallery";
+@import "videoGallery";
 
 .header-top-design {
 	background-color: #f6f7ed;
