--- a/Code/public/website/css/_navbar.scss
+++ b/Code/public/website/css/_navbar.scss
@@ -9,8 +9,10 @@
 			color: white;
 			padding-right: 2rem;
 		}
+		.navbar-nav li:hover .dropdown-menu {
+            display: block;
+        }
 		.dropdown-menu {
-
 			background-color: rgb(180, 0, 0);
 			.dropdown-item {
 				color: white;
@@ -33,9 +35,9 @@
 // Tablets : 768px and up
 @media (min-width: 768px) {
 	.navbar {
-        .nav-link{
-            font-size: 0.8rem;
-        }
+		.nav-link {
+			font-size: 0.8rem;
+		}
 		label {
 			display: none;
 		}
@@ -44,9 +46,9 @@
 // Tablets : 1024px and up
 @media (min-width: 1024px) {
 	.navbar {
-        .nav-link{
-            font-size:1.15rem;
-        }
+		.nav-link {
+			font-size: 1.15rem;
+		}
 		label {
 			display: none;
 		}
